# saffron-anima

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  Makefile  README.md  justfile  project.json  rust-toolchain.toml
engine/: CMakeLists.txt  Cargo.toml  README.md
engine/appdata/userdata/auto-empty-250569850144/: .luarc.json  project.json
engine/appdata/userdata/auto-empty-258439215930/: project.json
engine/appdata/userdata/auto-empty-334783580068/: project.json
engine/appdata/userdata/auto-empty-558950842250/: project.json
engine/appdata/userdata/auto-empty-912053504401/: project.json
engine/assets/icons/: AGENTS.md
engine/assets/models/: editor-camera.glb
engine/assets/shaders/: atmos_multiscatter.slang  atmos_skygen.slang  atmos_skyview.slang  atmos_transmittance.slang  ddgi_trace.slang  gbuffer.slang  gizmo_overlay.slang  grid.slang  gtao.slang  ibl_irradiance.slang  ibl_prefilter.slang  lighting.slang  mesh.slang  morph.slang  motion.slang  motion_visualize.slang  point_shadow.slang  preview.slang  restir_reuse.slang  skin.slang  ssgi.slang  ssgi_accum.slang  ssgi_blur.slang  ssr.slang  tonemap.slang  wireframe_overlay.slang
engine/crates/animation/: Cargo.toml
engine/crates/animation/src/: algebra.rs  error.rs  ik.rs  lib.rs  pose.rs  runtime.rs  sample.rs
engine/crates/app/: Cargo.toml
engine/crates/app/src/: lib.rs
engine/crates/assets/: Cargo.toml
engine/crates/assets/src/: cache.rs  catalog.rs  codegen.rs  error.rs  gpu.rs  graph.rs  import.rs  import_tests.rs  lib.rs  load.rs  manage.rs  material.rs  model.rs  names.rs  project.rs  project_tests.rs  render_material.rs  render_scene.rs  scan.rs  scan_tests.rs  spawn.rs  spawn_tests.rs  thumbnail.rs
engine/crates/assets/tests/: smat_golden_snapshot.rs
engine/crates/control/: Cargo.toml
engine/crates/control-client/: Cargo.toml
engine/crates/control-client/src/: lib.rs
engine/crates/control/src/: commands_animation.rs  commands_asset.rs  commands_physics.rs  commands_render.rs  commands_scene.rs  context.rs  error.rs  lib.rs  registry.rs  selector.rs  server.rs  test_support.rs
engine/crates/control/tests/: server.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: base64.rs  error.rs  lib.rs  log.rs  time.rs  uuid.rs
engine/crates/e2e/: Cargo.toml
engine/crates/e2e/src/: lib.rs
engine/crates/e2e/tests/: contract_u64.rs  play_edge.rs  smoke.rs  validation_gate.rs
engine/crates/geometry/: Cargo.toml
engine/crates/geometry/src/: error.rs  gltf_import.rs  image_decode.rs  lib.rs  obj_import.rs  picking.rs  sanim.rs  smesh.rs  smodel.rs  sub_id.rs  translate.rs  types.rs
engine/crates/geometry/tests/: gltf_import.rs  golden_snapshot.rs
engine/crates/host/: Cargo.toml
engine/crates/host/src/: control_renderer.rs  layer.rs  lib.rs  main.rs  overlay.rs  script_bridge.rs  viewport_shm.rs
engine/crates/host/tests/: shm_abi_gate.rs  shm_header_golden.rs
engine/crates/json/: Cargo.toml
engine/crates/json/src/: lib.rs
engine/crates/log/: Cargo.toml
engine/crates/log/src/: lib.rs
engine/crates/physics/: Cargo.toml
engine/crates/physics-sys/: Cargo.toml  build.rs
engine/crates/physics-sys/shim/: jolt_bridge.cpp  jolt_bridge.h
engine/crates/physics-sys/src/: bridge.rs  jolt_build_flags.rs  lib.rs
engine/crates/physics/src/: error.rs  lib.rs  types.rs  world.rs
engine/crates/physics/tests/: determinism.rs
engine/crates/player/: Cargo.toml  build.rs
engine/crates/player/src/: main.rs
engine/crates/protocol/: Cargo.toml
engine/crates/protocol/src/: codegen.rs  command.rs  dto.rs  lib.rs  schema.rs  uuid.rs
engine/crates/protocol/tests/: inventory.rs  schema_fragments.rs  wire.rs
engine/crates/rendering/: Cargo.toml
engine/crates/rendering/src/: aa.rs  budget.rs  ddgi.rs  descriptors.rs  device.rs  draw_list.rs  frame.rs  frame_history.rs  gpu_types.rs  ibl.rs  instancing.rs  lib.rs  lighting.rs  overlay.rs  pipelines.rs  present.rs  profiler.rs  quality.rs  reactive.rs  render_graph.rs  render_settings.rs  renderer.rs  resources.rs  restir.rs  rt.rs  scene_pass.rs  shm_publish.rs  skinning.rs  ssao.rs  swapchain.rs  targets.rs  thumbnail.rs  thumbnail_render.rs  upload.rs  view_target.rs
engine/crates/rendering/tests/: std430_golden_snapshot.rs  swapchain_present.rs
engine/crates/runtime/: Cargo.toml
engine/crates/runtime/src/: bridge.rs  lib.rs  session.rs
engine/crates/sa/: Cargo.toml
engine/crates/sa/src/: main.rs
engine/crates/scene/: Cargo.toml
engine/crates/scene/benches/: ecs.rs
engine/crates/scene/src/: component.rs  document.rs  environment.rs  error.rs  hierarchy.rs  lib.rs  macros.rs  registry.rs  scene.rs  script_input.rs  serde.rs
engine/crates/scene/tests/: component_serde_bytecompat.rs
engine/crates/sceneedit/: Cargo.toml
engine/crates/sceneedit/src/: camera.rs  context.rs  error.rs  gizmo.rs  lib.rs  overlay.rs  play.rs  smoothing.rs
engine/crates/script/: Cargo.toml
engine/crates/script/src/: bindings.rs  bridge.rs  convert.rs  entity.rs  error.rs  lib.rs  runtime.rs  scheduler.rs  schema.rs  session.rs  structural.rs  value.rs  vm.rs
engine/crates/script/tests/: host_bridge_and_contacts.rs  runtime_lifecycle.rs  scheduler_messages_input.rs  value_surface.rs
engine/crates/signal/: Cargo.toml
engine/crates/signal/src/: lib.rs
engine/crates/test-support/: Cargo.toml
engine/crates/test-support/src/: lib.rs
engine/crates/window/: Cargo.toml
engine/crates/window/src/: lib.rs
engine/source/: main.cpp
engine/source/saffron/animation/: animation.cpp  animation.cppm
engine/source/saffron/app/: app.cppm
engine/source/saffron/assets/: AGENTS.md  assets.cppm  assets_thumbnail.cpp  script_component_defs.generated.hpp
engine/source/saffron/control/: AGENTS.md  command.cppm  control.cppm  control_dto.cppm  (+7 more)
engine/xtask/: Cargo.toml
engine/xtask/src/: main.rs  shaders.rs
tools/sa/: AGENTS.md  CMakeLists.txt
tools/sa/source/: main.cpp
tools/se/: AGENTS.md  CMakeLists.txt
tools/se/source/: main.cpp
(+992 files in other folders)
