[package]
name = "saffron-animation"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
saffron-core = { path = "../core" }
saffron-geometry = { path = "../geometry" }
saffron-scene = { path = "../scene" }
glam.workspace = true
thiserror.workspace = true

[dev-dependencies]
saffron-test-support = { path = "../test-support" }
