[package]
name = "saffron-e2e"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
# Boots the host binary headless and drives the control socket from Cargo. Dev/test only.
publish = false

[lib]
name = "saffron_e2e"
path = "src/lib.rs"

[lints]
workspace = true

# The harness links the shared wire client + the protocol DTOs (so seed tests deserialize a
# `render-stats` reply into its typed DTO). It spawns the already-built `saffron-host` binary by
# path, so it does not depend on the host crate.
[dependencies]
saffron-control-client = { path = "../control-client" }
saffron-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
rustix = { workspace = true, features = ["process"] }
thiserror = { workspace = true }
