[package]
name = "saffron-json"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
saffron-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
