[package]
name = "saffron-log"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
nu-ansi-term.workspace = true
