[package]
name = "saffron-scene"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
saffron-core = { path = "../core" }
saffron-json = { path = "../json" }
hecs.workspace = true
thiserror.workspace = true
glam.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
serde = { workspace = true }

# The ECS speed go/no-go gate (03-ecs-and-scene phase 2). Disable the libtest harness so
# criterion's own `main` drives the per-frame iteration + structural-churn measurements.
[[bench]]
name = "ecs"
harness = false
