[package]
name = "saffron-sceneedit"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
saffron-core = { path = "../core" }
saffron-signal = { path = "../signal" }
saffron-scene = { path = "../scene" }
saffron-json = { path = "../json" }
glam.workspace = true
serde_json.workspace = true
thiserror.workspace = true
